SUBDIRS = libnetlink
lib_LTLIBRARIES = libconfig.la libconfigsnmp.la
libconfig_la_SOURCES = \
	acl.c \
	args.c \
	crc32.c \
	crc.c \
	debug.c \
	dev.c \
	device.c \
	dhcp.c \
	dns.c \
	error.c \
	exec.c \
	flashsave.c \
	hash.c \
	hash_sn.c \
	ip.c \
	ipsec.c \
	lan.c \
	list-lib.c \
	lock.c \
	md5.c \
	mib.c \
	modem3G.c \
	ntp.c \
	nv.c \
	pam.c \
	pim.c \
	ppcio.c \
	ppp.c \
	process.c \
	qos.c \
	quagga.c \
	smcroute.c \
	snmp.c \
	ssh.c \
	str.c \
	libtime.c \
	tunnel.c \
	version.c \
	vlan.c 

libconfig_la_LIBADD = $(top_builddir)/src/libnetlink/libnetlink.la


libconfigsnmp_la_SOURCES = \
	snmp.c

libconfigsnmp_ladir = $(includedir)/libconfig

libconfigsnmp_la_HEADERS = \
	snmp.h

libconfig_ladir = $(includedir)/libconfig
libconfig_la_HEADERS = \
	acl.h \
	args.h \
	cish_defines.h \
	debug.h \
	defines.h \
	dev.h \
	device.h \
	dhcp.h \
	dns.h \
	error.h \
	exec.h \
	flashsave.h \
	hash.h \
	hash_sn.h \
	initreq.h \
	ip.h \
	ipsec.h \
	lan.h \
	list-lib.h \
	lock.h \
	md5_config.h \
	md5.h \
	mib.h \
	modem3G.h \
	ntp.h \
	nv.h \
	pam.h \
	pim.h \
	ppcio.h \
	ppp.h \
	process.h \
	qos.h \
	quagga.h \
	shm.h \
	smcroute.h \
	snmp.h \
	ssh.h \
	str.h \
	libtime.h \
	tunnel.h \
	typedefs.h \
	version.h \
	vlan.h
