SUBDIRS = libnetlink
lib_LTLIBRARIES = librouter.la libroutersnmp.la
librouter_la_SOURCES = \
	acl.c \
	args.c \
	crc32.c \
	crc.c \
	debug.c \
	dev.c \
	device.c \
	dhcp.c \
	dns.c \
	error.c \
	exec.c \
	flashsave.c \
	hash.c \
	hash_sn.c \
	ip.c \
	ipsec.c \
	lan.c \
	lock.c \
	mangle.c \
	md5.c \
	mib.c \
	modem3G.c \
	nat.c \
	ntp.c \
	nv.c \
	pam.c \
	pim.c \
	ppcio.c \
	ppp.c \
	process.c \
	ps.c \
	qos.c \
	quagga.c \
	config_fetcher.c \
	sha1.c \
	smcroute.c \
	snmp.c \
	ssh.c \
	str.c \
	libtime.c \
	tunnel.c \
	version.c \
	usb.c \
	vlan.c 

librouter_la_LIBADD = $(top_builddir)/src/libnetlink/libnetlink.la


libroutersnmp_la_SOURCES = \
	snmp.c

libroutersnmp_ladir = $(includedir)/librouter

libroutersnmp_la_HEADERS = \
	snmp.h

librouter_ladir = $(includedir)/librouter
librouter_la_HEADERS = \
	acl.h \
	args.h \
	cish_defines.h \
	debug.h \
	defines.h \
	dev.h \
	device.h \
	dhcp.h \
	dns.h \
	error.h \
	exec.h \
	flashsave.h \
	hash.h \
	hash_sn.h \
	initreq.h \
	ip.h \
	ipsec.h \
	lan.h \
	lock.h \
	mangle.h \
	md5_config.h \
	md5.h \
	mib.h \
	modem3G.h \
	nat.h \
	ntp.h \
	nv.h \
	options.h \
	pam.h \
	pim.h \
	ppcio.h \
	ppp.h \
	process.h \
	ps.h \
	qos.h \
	quagga.h \
	config_fetcher.h \
	sha1.h \
	shm.h \
	smcroute.h \
	snmp.h \
	ssh.h \
	str.h \
	libtime.h \
	tunnel.h \
	typedefs.h \
	version.h \
	usb.h \
	vlan.h
