SUBDIRS = libnetlink libbridge
lib_LTLIBRARIES = librouter.la
librouter_la_SOURCES = \
	acl.c \
	args.c \
	bridge.c \
	crc32.c \
	crc.c \
	data.c \
	debug.c \
	dev.c \
	device.c \
	dhcp.c \
	dns.c \
	efm.c \
	error.c \
	exec.c \
	flashsave.c \
	hash.c \
	hash_sn.c \
	ip.c \
	ipv6.c \
	ipsec.c \
	iptc.c \
	ksz8863.c \
	ksz8895.c \
	lan.c \
	lock.c \
	mangle.c \
	md5.c \
	mib.c \
	modem3G.c \
	nat.c \
	ntp.c \
	nv.c \
	pam.c \
	pim.c \
	ppcio.c \
	ppp.c \
	process.c \
	ps.c \
	qos.c \
	quagga.c \
	config_fetcher.c \
	config_mapper.c \
	sha1.c \
	smcroute.c \
	snmp.c \
	ssh.c \
	str.c \
	libtime.c \
	tunnel.c \
	version.c \
	pbr.c \
	usb.c \
	pptp.c \
	pppoe.c \
	bcm53115s.c \
	vlan.c \
	vrrp.c

librouter_la_LIBADD = $(top_builddir)/src/libnetlink/libnetlink.la \
		$(top_builddir)/src/libbridge/libbridge.la

librouter_ladir = $(includedir)/librouter
librouter_la_HEADERS = \
	acl.h \
	args.h \
	bridge.h \
	data.h \
	debug.h \
	defines.h \
	dev.h \
	device.h \
	dhcp.h \
	dns.h \
	efm.h \
	error.h \
	exec.h \
	flashsave.h \
	hash.h \
	hash_sn.h \
	initreq.h \
	ip.h \
	ipv6.h \
	iptc.h \
	ipsec.h \
	ksz8863.h \
	ksz8895.h \
	lan.h \
	lock.h \
	mangle.h \
	md5_config.h \
	md5.h \
	mib.h \
	modem3G.h \
	nat.h \
	ntp.h \
	nv.h \
	options.h \
	pam.h \
	pim.h \
	ppcio.h \
	ppp.h \
	process.h \
	ps.h \
	qos.h \
	quagga.h \
	config_fetcher.h \
	config_mapper.h \
	sha1.h \
	shm.h \
	smcroute.h \
	snmp.h \
	ssh.h \
	str.h \
	libtime.h \
	tunnel.h \
	typedefs.h \
	version.h \
	pbr.h \
	usb.h \
	pptp.h \
	pppoe.h \
	bcm53115s.h \
	bcm53115s_etc.h \
	vlan.h \
	vrrp.h

